Implement 10 new features and adjustments: - Rename Feed to My List - Add Favorites Heart icon to header - Multi-step Onboarding flow for tastes - Enhanced Google Places data (Phone, Website, Hours) - Photo carousels in cards and details view - Multi-group selection for restaurants - Milestone-based Level-up celebration with confetti - Share invitation improvements - Integrated canvas-confetti for animations

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.90.1",
     "@tailwindcss/vite": "^4.1.18",
+    "canvas-confetti": "^1.9.4",
     "clsx": "^2.1.1",
     "framer-motion": "^12.27.0",
     "leaflet": "^1.9.4",
